# wanheda

./: .gitignore  Cargo.toml  index.html  style.css
backend/: .env  Cargo.toml  Rocket.toml.example  readme.txt
backend/migrations/2022-11-16-225925_add_product/: up.sql
backend/migrations/2022-11-19-013529_create_products/: up.sql
backend/migrations/2022-11-19-013532_create_users/: up.sql
backend/src/: auth.rs  database.rs  main.rs  models.rs  schema.rs
backend/src/routes/: index.rs  mod.rs  products.rs  users.rs
frontend/: Cargo.toml  index.html  style.css
frontend/.cargo/: config.toml
frontend/src/: api.rs  lib.rs  main.rs  models.rs  router.rs
frontend/src/components/: header.rs  mod.rs  navigation.rs  redirect.rs
frontend/src/pages/: home.rs
src/: lib.rs  main.rs  router.rs
src/components/: redirect.rs
src/pages/: not_found.rs
