[package]
name = "wanheda-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "f0d678d464e776aaaf5d7d5f1d30df3422d362f9", features = ["json", "secrets"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "f0d678d464e776aaaf5d7d5f1d30df3422d362f9", features = ["diesel_postgres_pool"] }
diesel = { version = "2.0.0-rc.0", features = ["postgres"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
sentry = "0.29.0"
rocket-sentry = { git = "https://github.com/HitoIRL/rocket-sentry" }
argon2 = "0.4"
rand_core = { version = "0.6", features = ["std"] }
