[package]
name = "wanheda"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
stylist = { version = "0.10.1", features = [ "yew" ] }
reqwest = { version = "0.11.13", features = [ "json" ] }
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
log = "0.4.17"
serde = { version = "1.0.147", features = [ "derive" ] }
serde_json = "1.0.88"
